--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,44 +6,25 @@ My Blog
 {% endblock %} 
 
 {% block css_files %}
+  <link rel="stylesheet" href="{% static "blog/post.css" %}" />
   <link rel="stylesheet" href="{% static "blog/index.css" %}" />
 {% endblock %}
 
 {% block content %}
-<header id="main-navigation">
-  <h1><a href="">Hamza' Blog</a></h1>
-  <nav>
-    <a href="">All Posts</a>
-  </nav>
-</header>
 
 <section id="welcome">
   <header>
-    <img src="" alt="Max - The Author Of This Blog" />
+    <img src="{% static "blog/images/hamza.jpeg" %}" alt="Hamza - The Author Of This Blog" />
     <h2>HAMZA'S BLOG</h2>
   </header>
-  <p>Hi, I am Max and I love to blog about tech and the world!</p>
+  <p>Hi, I am Hamza and I love to blog about tech and the world!</p>
 </section>
 
 <section id="latest-posts">
   <h2>My Latest Thoughts</h2>
 
   <ul>
-    <li>
-      <article class="post">
-        <a href="">
-          <img src="" alt="Mountain Hiking" />
-          <div class="post__content">
-            <h3>Mountain Hiking</h3>
-            <p>
-              There's nothing like the views you get when hiking in the
-              mountains! And I wasn't even prepared for what happened whilst I
-              was enjoying the view!
-            </p>
-          </div>
-        </a>
-      </article>
-    </li>
+    {% include "blog/includes/post.html" %}
   </ul>
 </section>
 
