--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -19,7 +19,7 @@
             {% endfor %}
         </div>
         <article>
-            <img src="{% static "blog/images/"|add:post.image_name %}" alt="Post Title" />
+            <img src="{{ post.image.url }}" alt="Post Title" />
             <address>By <a href="mailto:{{post.author.email_address}}">{{ post.author }}</a></address>
             <div>
                 Last Updated on <time>{{ post.date|date:"d M Y"}}</time>
